FileSystem#equals is gone because it is useless for most users. FileSystem#close is available.